--- a/package.json
+++ b/package.json
@@ -38,6 +38,9 @@
     "@gilsdav/ngx-translate-router": "^7.0.0",
     "@gilsdav/ngx-translate-router-http-loader": "^2.0.0",
     "@ngneat/tailwind": "7.0.3",
+    "@ngrx/data": "^17.0.1",
+    "@ngrx/effects": "^17.0.1",
+    "@ngrx/entity": "^17.0.1",
     "@ngrx/store": "^17.0.1",
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
@@ -61,6 +64,7 @@
     "@biesbjerg/ngx-translate-extract-marker": "^1.0.0",
     "@commitlint/cli": "^18.4.4",
     "@commitlint/config-conventional": "^18.4.4",
+    "@ngrx/eslint-plugin": "^17.0.1",
     "@types/jasmine": "^5.1.4",
     "@types/lodash-es": "^4.17.12",
     "@types/node": "^20.10.6",
