--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@ngrx/effects": "^17.0.1",
     "@ngrx/entity": "^17.0.1",
     "@ngrx/store": "^17.0.1",
+    "@ngrx/store-devtools": "^17.0.1",
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
     "lodash-es": "^4.17.21",
