--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@ngrx/data": "^17.0.1",
     "@ngrx/effects": "^17.0.1",
     "@ngrx/entity": "^17.0.1",
+    "@ngrx/router-store": "^17.0.1",
     "@ngrx/store": "^17.0.1",
     "@ngrx/store-devtools": "^17.0.1",
     "@ngx-translate/core": "^15.0.0",
