--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -46,9 +46,7 @@
       "files": [
         "*.ts"
       ],
-      "extends": [
-        "plugin:@ngrx/all-requiring-type-checking"
-      ]
+      "extends": []
     }
   ]
 }
