--- a/angular.json
+++ b/angular.json
@@ -134,7 +134,12 @@
           "builder": "ngx-devkit-builders:version",
           "options": {
             "outputFile": "src/environments/version.ts",
-            "fields": ["version", "date", "git", "author"],
+            "fields": [
+              "version",
+              "date",
+              "git",
+              "author"
+            ],
             "lint": "eslint",
             "verbose": false
           }
