--- a/package.json
+++ b/package.json
@@ -24,16 +24,16 @@
     "fix-vulnerabilities": "npx yarn-audit-fix && npx browserslist --update-db"
   },
   "dependencies": {
-    "@angular/animations": "^19.0.0-rc.2",
-    "@angular/cdk": "^19.0.0-rc.2",
-    "@angular/common": "^19.0.0-rc.2",
-    "@angular/compiler": "^19.0.0-rc.2",
-    "@angular/core": "^19.0.0-rc.2",
-    "@angular/forms": "^19.0.0-rc.2",
-    "@angular/material": "^19.0.0-rc.2",
-    "@angular/platform-browser": "^19.0.0-rc.2",
-    "@angular/platform-browser-dynamic": "^19.0.0-rc.2",
-    "@angular/router": "^19.0.0-rc.2",
+    "@angular/animations": "^19.0.1",
+    "@angular/cdk": "^19.0.0",
+    "@angular/common": "^19.0.1",
+    "@angular/compiler": "^19.0.1",
+    "@angular/core": "^19.0.1",
+    "@angular/forms": "^19.0.1",
+    "@angular/material": "^19.0.0",
+    "@angular/platform-browser": "^19.0.1",
+    "@angular/platform-browser-dynamic": "^19.0.1",
+    "@angular/router": "^19.0.1",
     "@gilsdav/ngx-translate-router": "^7.2.1",
     "@gilsdav/ngx-translate-router-http-loader": "^2.0.0",
     "@ngrx/data": "^18.1.1",
@@ -53,9 +53,9 @@
     "zone.js": "^0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.0.0-rc.2",
-    "@angular/cli": "^19.0.0-rc.2",
-    "@angular/compiler-cli": "^19.0.0-rc.2",
+    "@angular-devkit/build-angular": "^19.0.2",
+    "@angular/cli": "^19.0.2",
+    "@angular/compiler-cli": "^19.0.1",
     "@biesbjerg/ngx-translate-extract-marker": "^1.0.0",
     "@commitlint/cli": "^19.5.0",
     "@commitlint/config-angular": "^19.5.0",
@@ -64,7 +64,7 @@
     "@types/lodash-es": "^4.17.12",
     "@types/node": "^22.9.0",
     "@vendure/ngx-translate-extract": "^9.2.1",
-    "angular-eslint": "18.4.0",
+    "angular-eslint": "18.4.2",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.14.0",
     "husky": "^9.1.6",
