--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,26 +24,13 @@ jobs:
         with:
           node-version: 22
 
-      - name: 🛠️ Cache node modules
-        id: cache
-        uses: actions/cache@v4
-        with:
-          path: node_modules
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: |
-            ${{ runner.OS }}-yarn-${{ env.cache-name }}-
-            ${{ runner.OS }}-yarn-
-            ${{ runner.OS }}-
+      - name: 🛠️ Set git info
+        uses: ./.github/actions/git-info
 
       - name: 🛠️ Install
-        if: steps.cache.outputs.cache-hit != 'true'
-        run: yarn install --frozen-lockfile
+        uses: ./.github/actions/cached-deps
 
-      - name: 🛠️ Postinstall
-        if: steps.cache.outputs.cache-hit == 'true'
-        run: yarn postinstall
-
-      - name: 🌡️ Lint
+      - name: 🧹 Lint
         run: yarn lint
 
       - name: 📦 Build demo app
