--- a/package.json
+++ b/package.json
@@ -49,8 +49,7 @@
     "ngx-fixed-footer": "^4.0.0",
     "ngx-translate-version": "^5.0.0",
     "rxjs": "^7.8.2",
-    "tslib": "^2.8.1",
-    "zone.js": "^0.15.1"
+    "tslib": "^2.8.1"
   },
   "devDependencies": {
     "@angular/build": "^20.1.1",
